# llm-inference-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  models.py  routes.py
app/cache/: __init__.py  prompt_cache.py  redis_client.py
app/engine/: __init__.py  batching.py  mock_engine.py  vllm_engine.py
app/middleware/: __init__.py  correlation.py  rate_limiter.py  timeout.py
app/observability/: __init__.py  logging.py  metrics.py
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasources.yml
docker/prometheus/: prometheus.yml
docs/: AUTOSCALING.md  TESTING_GUIDE.md
grafana/: dashboard.json
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  prometheus-adapter.yaml  redis.yaml  secret.yaml  service.yaml  servicemonitor.yaml
scripts/: deploy-minikube.sh  test_all.sh
tests/load/: __init__.py  locustfile.py
